--- a/PrimalHealthGroup/Views/Patients/Index.cshtml
+++ b/PrimalHealthGroup/Views/Patients/Index.cshtml
@@ -31,13 +31,7 @@
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.InsuranceType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IssueType)
             </th>
             <th></th>
         </tr>
@@ -64,17 +58,11 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.InsuranceType)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IssueType)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.PatientId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PatientId">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.PatientId">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.PatientId">Details</a>
                 <a asp-action="Delete" asp-route-id="@item.PatientId">Delete</a>
             </td>
         </tr>
