--- a/PrimalHealthGroup/Views/Patients/Index.cshtml
+++ b/PrimalHealthGroup/Views/Patients/Index.cshtml
@@ -61,8 +61,8 @@
                 @Html.DisplayFor(modelItem => item.InsuranceType)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PatientId">Edit</a>
-                <a asp-action="Details" asp-route-id="@item.PatientId">Details</a>
+                <a asp-action="Edit" asp-route-id="@item.PatientId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.PatientId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.PatientId">Delete</a>
             </td>
         </tr>
